# aitestgen

./: .gitignore  README.md  pyproject.toml
aitestgen/: __main__.py  aitestgen.py  examples.py
magicaitest/: __main__.py  examples.py  magicaitest.py
magictest/: __main__.py  autotest.py  examples.py  magictest.py
magictest/types/: function_data.py
